src/app/component/snapshots/jedit__app__component__workspace__test__render_exit_confirm_test.snap
---
source: src/app/component/workspace.rs
expression: "stateful_render_to_string(&worktree, &mut state,)"
---
"┌Tree──────────────────────────────────────────────────────────────────────────┐"
"│> root                                                                       ↑│"
"│                                                                             █│"
"│                                                                             █│"
"│                                                                             █│"
"│                                                                             █│"
"│                                                                             █│"
"│                                                                             █│"
"│                         ┌──────────────────────────┐                        █│"
"│                         │                          │                        █│"
"│                         │ Discard unsaved changes? │                        █│"
"│                         │                          │                        █│"
"│                         └───────[Y]es / [N]o───────┘                        █│"
"│                                                                             █│"
"│                                                                             █│"
"│                                                                             █│"
"│                                                                             █│"
"│                                                                             █│"
"│                                                                             ↓│"
"└──────────────────────────────────────────────────────────────────────────────┘"
