src/app/component/snapshots/jedit__app__component__workspace__test__render_invalid_test-2.snap
---
source: src/app/component/workspace.rs
expression: "stateful_render_to_string(&worktree, &mut state)"
---
"┌Tree──────────────────────────────────────────────────────────────────────────┐"
"│  root                                                                       ↑│"
"│  --web-app                                                                  ║│"
"│  ----servlet                                                                ║│"
"│> ------0                                                                    █│"
"│  ------1                                                                    █│"
"│  ------2                                                                    █│"
"│  ------3                                                                    █│"
"│  ------4             ┌─────────────Error!─────────────┐                     █│"
"│  ----servlet-mapping │                                │                     █│"
"│  ----taglib          │ Cannot rename list or terminal │                     █│"
"│                      │                                │                     █│"
"│                      └─────────Press any key──────────┘                     █│"
"│                                                                             █│"
"│                                                                             ║│"
"│                                                                             ║│"
"│                                                                             ║│"
"│                                                                             ║│"
"│                                                                             ↓│"
"└──────────────────────────────────────────────────────────────────────────────┘"
