src/app/component/snapshots/jedit__app__component__workspace__test__render_large_preview_test-2.snap
---
source: src/app/component/workspace.rs
expression: "stateful_render_to_string(&worktree, &mut state)"
---
"┌Tree──────────────────────┐┌Preview───────────────────────────────────────────┐"
"│  root                   ↑││  1 {                                            ↑│"
"│> --0                    █││  2   "web-app": {                               █│"
"│  --1                    ║││  3     "servlet": [                             █│"
"│  --2                    ║││  4       {                                      █│"
"│  --3                    ║││  5         "servlet-name": "cofaxCDS",          ║│"
"│  --4                    ║││  6         "servlet-class": "org.cofax.cds.CDSS ║│"
"│  --5                    ║││  7         "init-param": {                      ║│"
"│  --6                    ║││  8           "configGlossary:installationAt": " ║│"
"│  --7                    ║││  9           "configGlossary:adminEmail": "ksm@ ║│"
"│  --8                    ║││ 10           "configGlossary:poweredBy": "Cofax ║│"
"│  --9                    ║││ 11           "configGlossary:poweredByIcon": "/ ║│"
"│  --10                   ║││ 12           "configGlossary:staticPath": "/con ║│"
"│  --11                   ║││ 13           "templateProcessorClass": "org.cof ║│"
"│  --12                   ║││ 14           "templateLoaderClass": "org.cofax. ║│"
"│  --13                   ║││ 15           "templatePath": "templates",       ║│"
"│  --14                   ║││ 16           "templateOverridePath": "",        ║│"
"│  --15                   ║││                                                 ↓│"
"│  --16                   ↓││←█████████████████████████══════════════════════→ │"
"└──────────────────────────┘└──────────────────────────────────────────────────┘"
