src/app/component/snapshots/jedit__app__component__workspace__test__render_large_preview_test-3.snap
---
source: src/app/component/workspace.rs
expression: "stateful_render_to_string(&worktree, &mut state)"
---
"┌Tree──────────────────────┐┌Preview───────────────────────────────────────────┐"
"│> root                   ↑││                                                  │"
"│  --0                    █││                                                  │"
"│  --1                    ║││                                                  │"
"│  --2                    ║││                                                  │"
"│  --3                    ║││                                                  │"
"│  --4                    ║││                                                  │"
"│  --5                    ║││                                                  │"
"│  --6                    ║││                                                  │"
"│  --7                    ║││                                                  │"
"│  --8                    ║││               Preview not available              │"
"│  --9                    ║││                                                  │"
"│  --10                   ║││                                                  │"
"│  --11                   ║││                                                  │"
"│  --12                   ║││                                                  │"
"│  --13                   ║││                                                  │"
"│  --14                   ║││                                                  │"
"│  --15                   ║││                                                  │"
"│  --16                   ↓││                                                  │"
"└──────────────────────────┘└──────────────────────────────────────────────────┘"
