src/app/component/snapshots/jedit__app__component__workspace__test__render_loading_test-2.snap
---
source: src/app/component/workspace.rs
expression: "stateful_render_to_string(&worktree, &mut state)"
---
"┌Tree─────────────────────┐┌Preview────────────────────────────────────────────┐"
"│> root                  ↑││  1 {                                             ↑│"
"│                        █││  2   "web-app": {                                █│"
"│                        █││  3     "servlet": [                              █│"
"│                        █││  4       {                                       █│"
"│                        █││  5         "servlet-name": "cofaxCDS",           ║│"
"│                        █││  6         "servlet-class": "org.cofax.cds.CDSSe ║│"
"│                        █││  7         "init-param": {                       ║│"
"│                        █││  8           "configGlossary:installationAt": "P ║│"
"│                        █││  9           "configGlossary:adminEmail": "ksm@p ║│"
"│                        █││ 10           "configGlossary:poweredBy": "Cofax" ║│"
"│                        █││ 11           "configGlossary:poweredByIcon": "/i ║│"
"│                        █││ 12           "configGlossary:staticPath": "/cont ║│"
"│                        █││ 13           "templateProcessorClass": "org.cofa ║│"
"│                        █││ 14           "templateLoaderClass": "org.cofax.F ║│"
"│                        █││ 15           "templatePath": "templates",        ║│"
"│                        █││ 16           "templateOverridePath": "",         ║│"
"│                        █││                                                  ↓│"
"│                        ↓││←██████████████████████████══════════════════════→ │"
"└─────────────────────────┘└───────────────────────────────────────────────────┘"
