src/app/component/snapshots/jedit__app__component__workspace__test__render_loading_test.snap
---
source: src/app/component/workspace.rs
expression: "stateful_render_to_string(&worktree, &mut state)"
---
"┌Tree──────────────────────┐┌Preview───────────────────────────────────────────┐"
"│> root                   ↑││  1 {                                            ↑│"
"│                         █││  2   "web-app": {                               █│"
"│                         █││  3     "servlet": [                             █│"
"│                         █││  4       {                                      █│"
"│                         █││  5         "servlet-name": "cofaxCDS",          ║│"
"│                         █││  6         "servlet-class": "org.cofax.cds.CDSS ║│"
"│                         █││  7         "init-param": {                      ║│"
"│                         █││  8 ┌────────────┐figGlossary:installationAt": " ║│"
"│                         █││  9 │            │figGlossary:adminEmail": "ksm@ ║│"
"│                         █││ 10 │ Loading    │figGlossary:poweredBy": "Cofax ║│"
"│                         █││ 11 │            │figGlossary:poweredByIcon": "/ ║│"
"│                         █││ 12 └────────────┘figGlossary:staticPath": "/con ║│"
"│                         █││ 13           "templateProcessorClass": "org.cof ║│"
"│                         █││ 14           "templateLoaderClass": "org.cofax. ║│"
"│                         █││ 15           "templatePath": "templates",       ║│"
"│                         █││ 16           "templateOverridePath": "",        ║│"
"│                         █││                                                 ↓│"
"│                         ↓││←█████████████████████████══════════════════════→ │"
"└──────────────────────────┘└──────────────────────────────────────────────────┘"
