src/app/component/snapshots/jedit__app__component__workspace__test__render_navigation_far-2.snap
---
source: src/app/component/workspace.rs
expression: "stateful_render_to_string(&worktree, &mut state)"
---
"┌Tree─────────────────────┐┌Preview────────────────────────────────────────────┐"
"│  ----------dataStoreNam↑││  1 {                                              │"
"│  ----------dataStoreDri║││  2   "taglib-uri": "cofax.tld",                   │"
"│  ----------dataStoreUrl║││  3   "taglib-location": "/WEB-INF/tlds/cofax.tld  │"
"│  ----------dataStoreUse║││  4 }                                              │"
"│  ----------dataStorePas║││                                                   │"
"│  ----------dataStoreTes║││                                                   │"
"│  ----------dataStoreLog║││                                                   │"
"│  ----------dataStoreIni║││                                                   │"
"│  ----------dataStoreMax║││                                                   │"
"│  ----------dataStoreCon║││                                                   │"
"│  ----------dataStoreLog║││                                                   │"
"│  ----------maxUrlLength║││                                                   │"
"│  ------1               ║││                                                   │"
"│  ------2               █││                                                   │"
"│  ------3               █││                                                   │"
"│  ------4               █││                                                   │"
"│  ----servlet-mapping   █││                                                   │"
"│> ----taglib            ↓││←███████████████████████████████████████████████═→ │"
"└─────────────────────────┘└───────────────────────────────────────────────────┘"
