src/app/component/snapshots/jedit__app__component__workspace__test__render_navigation_far-3.snap
---
source: src/app/component/workspace.rs
expression: "stateful_render_to_string(&worktree, &mut state)"
---
"┌Tree─────────────────────┐┌Preview────────────────────────────────────────────┐"
"│> root                  ↑││  1 {                                             ↑│"
"│  --web-app             █││  2   "web-app": {                                █│"
"│  ----servlet           █││  3     "servlet": [                              █│"
"│  ------0               █││  4       {                                       █│"
"│  --------servlet-name  █││  5         "servlet-name": "cofaxCDS",           ║│"
"│  --------servlet-class ║││  6         "servlet-class": "org.cofax.cds.CDSSe ║│"
"│  --------init-param    ║││  7         "init-param": {                       ║│"
"│  ----------configGlossa║││  8           "configGlossary:installationAt": "P ║│"
"│  ----------configGlossa║││  9           "configGlossary:adminEmail": "ksm@p ║│"
"│  ----------configGlossa║││ 10           "configGlossary:poweredBy": "Cofax" ║│"
"│  ----------configGlossa║││ 11           "configGlossary:poweredByIcon": "/i ║│"
"│  ----------configGlossa║││ 12           "configGlossary:staticPath": "/cont ║│"
"│  ----------templateProc║││ 13           "templateProcessorClass": "org.cofa ║│"
"│  ----------templateLoad║││ 14           "templateLoaderClass": "org.cofax.F ║│"
"│  ----------templatePath║││ 15           "templatePath": "templates",        ║│"
"│  ----------templateOver║││ 16           "templateOverridePath": "",         ║│"
"│  ----------defaultListT║││                                                  ↓│"
"│  ----------defaultFileT↓││←██████████████████████████══════════════════════→ │"
"└─────────────────────────┘└───────────────────────────────────────────────────┘"
