src/app/component/snapshots/jedit__app__component__workspace__test__render_navigation_far.snap
---
source: src/app/component/workspace.rs
expression: "stateful_render_to_string(&worktree, &mut state)"
---
"┌Tree──────────────────────┐┌Preview───────────────────────────────────────────┐"
"│  --web-app              ↑││  1 "articleTemplate.htm"                         │"
"│  ----servlet            ║││                                                  │"
"│  ------0                ║││                                                  │"
"│  --------servlet-name   ║││                                                  │"
"│  --------servlet-class  ║││                                                  │"
"│  --------init-param     █││                                                  │"
"│  ----------configGlossar█││                                                  │"
"│  ----------configGlossar█││                                                  │"
"│  ----------configGlossar█││                                                  │"
"│  ----------configGlossar║││                                                  │"
"│  ----------configGlossar║││                                                  │"
"│  ----------templateProce║││                                                  │"
"│  ----------templateLoade║││                                                  │"
"│  ----------templatePath ║││                                                  │"
"│  ----------templateOverr║││                                                  │"
"│  ----------defaultListTe║││                                                  │"
"│> ----------defaultFileTe║││                                                  │"
"│  ----------useJSP       ↓││                                                  │"
"└──────────────────────────┘└──────────────────────────────────────────────────┘"
