src/app/component/snapshots/jedit__app__component__workspace__test__render_navigation_far_test-2.snap
---
source: src/app/component/workspace.rs
expression: "stateful_render_to_string(&worktree, &mut state)"
---
"┌Tree──────────────────────┐┌Preview───────────────────────────────────────────┐"
"│  ----------dataStoreName↑││  1 {                                             │"
"│  ----------dataStoreDriv║││  2   "taglib-uri": "cofax.tld",                  │"
"│  ----------dataStoreUrl ║││  3   "taglib-location": "/WEB-INF/tlds/cofax.tl  │"
"│  ----------dataStoreUser║││  4 }                                             │"
"│  ----------dataStorePass║││                                                  │"
"│  ----------dataStoreTest║││                                                  │"
"│  ----------dataStoreLogF║││                                                  │"
"│  ----------dataStoreInit║││                                                  │"
"│  ----------dataStoreMaxC║││                                                  │"
"│  ----------dataStoreConn║││                                                  │"
"│  ----------dataStoreLogL║││                                                  │"
"│  ----------maxUrlLength ║││                                                  │"
"│  ------1                ║││                                                  │"
"│  ------2                █││                                                  │"
"│  ------3                █││                                                  │"
"│  ------4                █││                                                  │"
"│  ----servlet-mapping    █││                                                  │"
"│> ----taglib             ↓││←█████████████████████████████████████████████══→ │"
"└──────────────────────────┘└──────────────────────────────────────────────────┘"
